# chattbc-wowarmory

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  render.yaml  sgconfig.yml
.github/workflows/: ci.yml
.semgrep/: python-security.yml  typescript-security.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 68ae5dc6e30a_create_users_table.py  c1107f963a49_create_characters_and_guilds_tables.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: character.py  guild.py  user.py
backend/app/routers/: auth.py  bnet.py  characters.py  guilds.py  health.py  realms.py  search.py
backend/app/schemas/: bnet.py  character.py  guild.py  search.py  user.py
backend/app/services/: auth_service.py  blizzard.py  bnet_linking.py  cache.py  character_service.py  guild_service.py  search_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_bnet.py  test_characters.py  test_guilds.py  test_health.py  test_realms.py  test_search.py
backend/tests/unit/: test_blizzard_client.py  test_bnet_linking.py  test_cache_service.py  test_character_model.py  test_character_service.py  test_guild_model.py  test_guild_service.py  test_user_model.py
docs/: architecture.md  blizzard-api.md  conventions.md  data-models.md  stories.md
e2e/: pyproject.toml
e2e/tests/: conftest.py  test_auth.py  test_bnet_linking.py  test_character.py  test_guild.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
rules/python/: no-bare-except.yml  no-dict-return-in-router.yml  no-raw-httpx.yml
rules/typescript/: no-any-type.yml  no-default-export.yml  no-raw-fetch.yml
shared/tbc_data/: realms.json
(+28 files in other folders)
